argocd/aws/203403084713/clusters/cbioportal-prod/apps/ingress/redis-dev-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-dev-master-lb
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: cbioportal-public-persistence-redis-dev
    app.kubernetes.io/component: master
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-dev-replicas-lb
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: cbioportal-public-persistence-redis-dev
    app.kubernetes.io/component: replica
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
